test2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.rule-path8: >
            {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"200","messageBody":"multiple conditions applies"}}
    alb.ingress.kubernetes.io/conditions.rule-path8: >
            [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "testing", "values":["sqe",]}}]
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: rule-path8
              servicePort: use-annotation
